--- a/main.css
+++ b/main.css
@@ -71,9 +71,10 @@ input:focus{
 .title {
     font-size: 50px;
     text-transform: uppercase;
-    border-bottom: 3px solid;
     padding: 12px 0;
     color: #080101;
+    position:absolute;
+    /*top:100px*/
   }
   
 .m-b-md {
