--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ input:focus{
     font-size: 50px;
     text-transform: uppercase;
     padding: 12px 0;
-    color: #080101;
+    color: rgb(226 221 210 / 1);
     position:absolute;
     /*top:100px*/
   }
@@ -82,7 +82,7 @@ input:focus{
 }
 
 .links>a {
-    color: #080101;
+    color: rgb(226 221 210 / 1);
     padding: 0 25px;
     font-size: 13px;
     font-weight: 600;
