--- a/main.css
+++ b/main.css
@@ -71,6 +71,7 @@ input:focus{
 .title {
     font-size: 50px;
     text-transform: uppercase;
+    text-align: center !important;
     padding: 12px 0;
     color: rgb(226 221 210 / 1);
     position:absolute;
@@ -78,7 +79,7 @@ input:focus{
   }
   
 .m-b-md {
-    margin-bottom: 30px;
+    margin: 30px;
 }
 
 .links>a {
